# thoughtspot_rest_api_v1_python

./: .snyk  .synk  LICENSE.md  README.md  requirements.txt  setup.cfg  setup.py  sonar-project.properties
examples/: README.md  audit_object_access.py  custom_actions.py  data_exports.py  delete_object.py  import_tables_rest_api.py  liveboard_pdf_export.py  objects_info_metadata.py  share_objects_access_control.py  tag_objects.py  transfer_object_ownership.py  trusted_authentication_with_authorization.py  users_groups_create_update.py
examples_v2/: README.md  abac_token_parameters.py  add_timeout_to_requests.py  create_connection_on_orgs.py  create_groups_for_auth.py  create_orgs_with_linked_git_branch.py  data_exports.py  git_deploy_commits_to_prod_single_tenants.py  git_guid_mapping_file_functions.py  objects_info_metadata.py  org_migration_data_content.py  org_migration_users_groups.py  publish_tml.py  report_exports.py  set_obj_id.py  share_objects_access_control.py  spotter_apis.py  tag_objects.py  transfer_object_ownership.py  users_groups_orgs_reporting.py
src/thoughtspot_rest_api_v1/: __init__.py  details_objects.py  tsrestapiv1.py  tsrestapiv2.py
