[metadata]
name = thoughtspot_rest_api_v1
version = 1.0.3
description = Library implementing the ThoughtSpot V1 REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thoughtspot/thoughtspot_rest_api_v1_python
author = Bryant Howell
author_email = bryant.howell@thoughtspot.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

project_urls =
    Documentation = https://github.com/thoughtspot/thoughtspot_rest_api_v1_python#readme
    Bug Tracker = https://github.com/thoughtspot/thoughtspot_rest_api_v1_python/issues


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    PyYAML
    oyaml


[options.packages.find]
where = src
